Replace --illegal-access workaround with --add-exports
--illegal-access=permit doesn't work since JDK 17.

 #KT-47152 Fixed

(cherry picked from commit 698c0bb2a9a179afe50599f2e94d4f6a5597a4cb)